rss icon, fix indent

--- a/web/source/css/profile.css
+++ b/web/source/css/profile.css
@@ -157,34 +157,22 @@
 	}
 }
 
-.profile {
-	.col-header {
-		display: flex;
-		justify-content: start;
-		gap: 2rem;
-		align-items: center; 
+.profile .col-header {
+	display: flex;
+	justify-content: start;
+	gap: 2rem;
+	align-items: center; 
 
+	margin: 0;
+	background: $profile-bg;
+	border-top-left-radius: $br;
+	border-top-right-radius: $br;
+	padding: 0.75rem;
+
+	h3 {
+		font-size: 1.2rem;
+		line-height: 1.3rem;
 		margin: 0;
-		background: $profile-bg;
-		border-top-left-radius: $br;
-		border-top-right-radius: $br;
-		padding: 0.75rem;
-
-		h3 {
-			font-size: 1.2rem;
-			line-height: 1.3rem;
-			margin: 0;
-		}
-
-		&.pinned {
-			display: grid;
-			grid-template-columns: auto 1fr;
-			gap: 1rem;
-
-			a {
-				justify-self: end;
-			}
-		}
 	}
 }
 
@@ -193,6 +181,31 @@
 	display: flex;
 	flex-direction: column;
 	gap: 0.4rem;
+
+	.col-header {
+		display: grid;
+		grid-template-columns: auto 1fr;
+		gap: 1rem;
+
+		a {
+			justify-self: end;
+		}
+
+		.rss-icon {
+			display: block;
+			margin: -0.25rem 0;
+			
+			.fa {
+				font-size: 2rem;
+				object-fit: contain;
+				vertical-align: middle;
+				color: $orange2;
+				/* can't size a single-color background, so we use a linear-gradient that's effectively white */
+				background: linear-gradient(to right, $white1 100%, transparent 0) no-repeat center center;
+				background-size: 1.2rem 1.4rem;
+			}
+		}
+	}
 
 	.toot {
 		.info {
