--- a/web/template/profile.tmpl
+++ b/web/template/profile.tmpl
@@ -20,123 +20,125 @@
 {{ template "header.tmpl" .}}
 
 <main class="profile">
-    <div class="header">
-        <div class="header-image">
-            {{ if .account.Header }}
-            <img src="{{.account.Header}}" alt="" />
-            {{ end }}
-        </div>
-        <div class="basic-info" aria-hidden="true">
-            <a class="avatar" href="{{.account.Avatar}}">
-                <img src="{{.account.Avatar}}" alt="">
-            </a>
-            <span class="displayname text-cutoff">
-                {{if .account.DisplayName}}
-                {{emojify .account.Emojis (escape .account.DisplayName)}}
-                {{else}}
-                {{.account.Username}}
-                {{end}}
-                <span class="sr-only">.</span>
-            </span>
-            <span class="username text-cutoff">@{{.account.Username}}<span class="sr-only">,
-                </span>{{acctInstance .account.Acct}}</span>
-            {{- /* Only render account role if 1. it's present and 2. it's not equal to the standard 'user' role */ -}}
-            {{ if and (.account.Role) (ne .account.Role.Name "user") }}
-            <div class="role {{ .account.Role.Name }}">
-                <span class="sr-only">Role: </span>{{ .account.Role.Name }}
-            </div>
-            {{ end }}
-            <!-- <a class="rss-icon-link" href="/@admin/feed.rss" aria-label="RSS feed">
-				<i class="rss-icon fa fa-rss-square" aria-hidden="true"></i>
-			</a> -->
-        </div>
-        <div class="sr-only">
-            Profile for
-            {{if .account.DisplayName}}{{.account.DisplayName}}{{else}}{{.account.Username}}{{end}}.
-            Username @{{.account.Username}}, {{acctInstance .account.Acct}}
-        </div>
-    </div>
+	<div class="header">
+		<div class="header-image">
+			{{ if .account.Header }}
+			<img src="{{.account.Header}}" alt="" />
+			{{ end }}
+		</div>
+		<div class="basic-info" aria-hidden="true">
+			<a class="avatar" href="{{.account.Avatar}}">
+				<img src="{{.account.Avatar}}" alt="">
+			</a>
+			<span class="displayname text-cutoff">
+				{{if .account.DisplayName}}
+				{{emojify .account.Emojis (escape .account.DisplayName)}}
+				{{else}}
+				{{.account.Username}}
+				{{end}}
+				<span class="sr-only">.</span>
+			</span>
+			<span class="username text-cutoff">@{{.account.Username}}<span class="sr-only">,
+				</span>{{acctInstance .account.Acct}}</span>
+			{{- /* Only render account role if 1. it's present and 2. it's not equal to the standard 'user' role */ -}}
+			{{ if and (.account.Role) (ne .account.Role.Name "user") }}
+			<div class="role {{ .account.Role.Name }}">
+				<span class="sr-only">Role: </span>{{ .account.Role.Name }}
+			</div>
+			{{ end }}
+		</div>
+		<div class="sr-only">
+			Profile for
+			{{if .account.DisplayName}}{{.account.DisplayName}}{{else}}{{.account.Username}}{{end}}.
+			Username @{{.account.Username}}, {{acctInstance .account.Acct}}
+		</div>
+	</div>
 
-    <div class="column-split">
+	<div class="column-split">
 
-        <section class="about-user">
-            <div class="col-header">
-                <h3>About</h3>
-            </div>
+		<section class="about-user">
+			<div class="col-header">
+				<h3>About</h3>
+			</div>
 
-            <div class="fields">
-                {{ range .account.Fields }}
-                <div class="field">
-                    <b>{{.Name}}</b>
-                    <span>{{.Value}}</span>
-                </div>
-                {{ end }}
-            </div>
+			<div class="fields">
+				{{ range .account.Fields }}
+				<div class="field">
+					<b>{{.Name}}</b>
+					<span>{{.Value}}</span>
+				</div>
+				{{ end }}
+			</div>
 
-            <div class="bio">
-                {{ if .account.Note }}
-                {{emojify .account.Emojis (noescape .account.Note)}}
-                {{else}}
-                This GoToSocial user hasn't written a bio yet!
-                {{end}}
-            </div>
+			<div class="bio">
+				{{ if .account.Note }}
+				{{emojify .account.Emojis (noescape .account.Note)}}
+				{{else}}
+				This GoToSocial user hasn't written a bio yet!
+				{{end}}
+			</div>
 
-            <div class="sr-only" role="group">
-                <span>Joined on {{.account.CreatedAt | timestampVague}}.</span>
-                <span>{{.account.StatusesCount}} post{{if .account.StatusesCount | eq 1 | not}}s{{end}}.</span>
-                <span>Followed by {{.account.FollowersCount}}.</span>
-                <span>Following {{.account.FollowingCount}}.</span>
-            </div>
+			<div class="sr-only" role="group">
+				<span>Joined on {{.account.CreatedAt | timestampVague}}.</span>
+				<span>{{.account.StatusesCount}} post{{if .account.StatusesCount | eq 1 | not}}s{{end}}.</span>
+				<span>Followed by {{.account.FollowersCount}}.</span>
+				<span>Following {{.account.FollowingCount}}.</span>
+			</div>
 
-            <div class="accountstats" aria-hidden="true">
-                <b>Joined</b><time datetime="{{.account.CreatedAt}}">{{.account.CreatedAt | timestampVague}}</time>
-                <b>Posts</b><span>{{.account.StatusesCount}}</span>
-                <b>Followed by</b><span>{{.account.FollowersCount}}</span>
-                <b>Following</b><span>{{.account.FollowingCount}}</span>
-            </div>
-        </section>
+			<div class="accountstats" aria-hidden="true">
+				<b>Joined</b><time datetime="{{.account.CreatedAt}}">{{.account.CreatedAt | timestampVague}}</time>
+				<b>Posts</b><span>{{.account.StatusesCount}}</span>
+				<b>Followed by</b><span>{{.account.FollowersCount}}</span>
+				<b>Following</b><span>{{.account.FollowingCount}}</span>
+			</div>
+		</section>
 
-        <section class="toots">
-            {{ if .pinned_statuses }}
-            <div class="col-header pinned">
-                <h3>Pinned posts</h3>
-                <a href="#recent">jump to recent</a>
-            </div>
-            <section class="thread">
-                {{ range .pinned_statuses }}
-                <article class="toot expanded" id="{{.ID}}">
-                    {{ template "status.tmpl" .}}
-                </article>
-                {{ end }}
-            </section>
-            {{ end }}
+		<section class="toots">
+			{{ if .pinned_statuses }}
+			<div class="col-header">
+				<h3>Pinned posts</h3>
+				<a href="#recent">jump to recent</a>
+			</div>
+			<section class="thread">
+				{{ range .pinned_statuses }}
+				<article class="toot expanded" id="{{.ID}}">
+					{{ template "status.tmpl" .}}
+				</article>
+				{{ end }}
+			</section>
+			{{ end }}
 
-            <div class="col-header">
-                <h3 id="recent" tabindex="-1">Recent posts</h3>
-            </div>
+			<div class="col-header">
+				<h3 id="recent" tabindex="-1">Recent posts</h3>
+				{{ if .rssFeed }}
+				<a href="{{ .rssFeed }}" class="rss-icon" aria-label="RSS feed">
+					<i class="fa fa-rss-square" aria-hidden="true"></i>
+				</a>
+				{{ end }}
+			</div>
 
-            <section class="thread">
-                {{ if not .statuses }}
-                <div data-nosnippet class="nothinghere">Nothing here!</div>
-                {{ else }}
-                {{ range .statuses }}
-                <article class="toot expanded" id="{{.ID}}">
-                    {{ template "status.tmpl" .}}
-                </article>
-                {{ end }}
-                {{ end }}
-            </section>
+			<section class="thread">
+				{{ if not .statuses }}
+				<div data-nosnippet class="nothinghere">Nothing here!</div>
+				{{ else }}
+				{{ range .statuses }}
+				<article class="toot expanded" id="{{.ID}}">
+					{{ template "status.tmpl" .}}
+				</article>
+				{{ end }}
+				{{ end }}
+			</section>
 
-            <div class="backnextlinks">
-                {{ if .show_back_to_top }}
-                <a href="/@{{ .account.Username }}">Back to top</a>
-                {{ end }}
-                {{ if .statuses_next }}
-                <a href="{{ .statuses_next }}" class="next">Show older</a>
-                {{ end }}
-            </div>
-        </section>
-    </div>
+			<div class="backnextlinks">
+				{{ if .show_back_to_top }}
+				<a href="/@{{ .account.Username }}">Back to top</a>
+				{{ end }}
+				{{ if .statuses_next }}
+				<a href="{{ .statuses_next }}" class="next">Show older</a>
+				{{ end }}
+			</div>
+		</section>
+	</div>
 </main>
 
 {{ template "footer.tmpl" .}}
